[tool.poetry]
name = "wilma"
version = "0.2.0"
description = "A smarter-than-caveman debugging tool"
authors = ["Gabriele Tornetta <gabriele.tornetta@datadoghq.com>"]
license = "GPL3+"
packages = [
    {include = "wilma"},
]

[tool.poetry.dependencies]
ddtrace = "^1.5"
python = "^3.7"
toml = "^0.10.2"
envier = "^0.3.0"
bytecode = "^0.13.0"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
wilma = "wilma.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
lines_after_imports = 2
profile = "black"
